@@ -1,2 +1,5 @@
 # OBJModelerFX
 Basic OBJ File Viewer Using JavaFX
+
+JVM ARGUMENTS:
+--module-path "YOUR PATH TO JAVAFX HERE" --add-modules javafx.controls,javafx.fxml -Dprism.forceGPU=true -Dprism.verbose=true -Dprism.vsync=false
